--- a/author.html
+++ b/author.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>GAR DE'ROBA | bespoke clothing company</title>
+    <title>GAR DE'ROBA | author</title>
     <meta charset="utf-8" />
-    <meta name="description" content="Bespoke clothing company" />
-    <meta
-      name="keywords"
-      content="bespoke, clothing, tailored, unique, craftsmanship"
-    />
+    <meta name="description" content="Author page, reqired for project grading" />
     <meta name="author" content="Alexiye" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
