--- a/clients.html
+++ b/clients.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>GAR DE'ROBA | bespoke clothing company</title>
+    <title>GAR DE'ROBA | our clients</title>
     <meta charset="utf-8" />
     <meta name="description" content="Bespoke clothing company" />
     <meta
       name="keywords"
-      content="bespoke, clothing, tailored, unique, craftsmanship"
+      content="bespoke, clothing, dependable, delighted, easy"
     />
     <meta name="author" content="Alexiye" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
