--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>GAR DE'ROBA | bespoke clothing company</title>
+    <title>GAR DE'ROBA | contact</title>
     <meta charset="utf-8" />
-    <meta name="description" content="Bespoke clothing company" />
+    <meta name="description" content="Contact page for Gar De'Roba" />
     <meta
       name="keywords"
-      content="bespoke, clothing, tailored, unique, craftsmanship"
+      content="questions, faq, alter, time, long"
     />
     <meta name="author" content="Alexiye" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
