--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <title>GAR DE'ROBA | bespoke clothing company</title>
     <meta charset="utf-8" />
     <meta name="description" content="Bespoke clothing company" />
-    <meta
-      name="keywords"
-      content="bespoke, clothing, tailored, unique, craftsmanship"
-    />
+    <meta name="keywords" content="bespoke, clothing, tailored, unique, craftsmanship" />
     <meta name="author" content="Alexiye" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/img/color-logo.ico" />
@@ -54,8 +51,8 @@
           <aside>
             <h2>Welcome to Gar De'Roba</h2>
             <p>
-              where we believe that <span class="emphasize">every</span> woman
-              deserves to feel confident and beautiful in her own skin.<br />
+              where we believe that <span class="emphasize">every</span> woman deserves to
+              feel confident and beautiful in her own skin.<br />
               We specialize in creating bespoke clothing<br />
               that is tailor-made to <span class="emphasize">your</span> unique
               measurements<br />
@@ -78,11 +75,10 @@
         <div class="center whatis">
           <h2 id="learn-more">Experience the Luxury of Bespoke Clothing</h2>
           <p>
-            Whether you're looking for a stunning evening gown, a perfectly
-            fitted blazer,<br />
+            Whether you're looking for a stunning evening gown, a perfectly fitted
+            blazer,<br />
             or anything in between, we've got you covered.<br />
-            We work closely with you to ensure that every detail is just
-            right,<br />
+            We work closely with you to ensure that every detail is just right,<br />
             from the fabric selection to the finishing touches.
           </p>
           <div class="cta-black"><a href="portfolio.html">Discover</a></div>
@@ -91,21 +87,16 @@
       <section class="center">
         <div class="article-grid gap-15 mar-15">
           <div class="left-image">
-            <img
-              src="./assets/img/tailor1.jpg"
-              alt="Consultation with a tailor"
-            />
+            <img src="./assets/img/tailor1.jpg" alt="Consultation with a tailor" />
           </div>
 
           <article id="consultation">
-            <h2 class="header-italic">
-              Creating Your Perfectly Tailored Clothing
-            </h2>
+            <h2 class="header-italic">Creating Your Perfectly Tailored Clothing</h2>
             <p>
-              Our process starts with a consultation, either in person or
-              online, where we get to know you and your style preferences. We'll
-              take precise measurements and discuss your expectations, so we can
-              create a garment that is expertly crafted just for you.
+              Our process starts with a consultation, either in person or online, where we
+              get to know you and your style preferences. We'll take precise measurements
+              and discuss your expectations, so we can create a garment that is expertly
+              crafted just for you.
             </p>
             <div class="cta-black"><a href="contact.html">Start now</a></div>
           </article>
@@ -120,26 +111,22 @@
                     ><h2 class="header-italic">Our portfolio</h2></a
                   >
                   <p>
-                    Browse our portfolio of previously completed work to get
-                    inspired and see the quality of our craftsmanship.
+                    Browse our portfolio of previously completed work to get inspired and
+                    see the quality of our craftsmanship.
                   </p>
                 </div>
               </article>
             </div>
-            <img
-              src="./assets/img/tailor2.jpg"
-              alt="Tailor preparing for work"
-            />
+            <img src="./assets/img/tailor2.jpg" alt="Tailor preparing for work" />
           </div>
           <div class="line-grid gap-15">
             <article id="vision" class="block-pad">
               <h2 class="header-italic">Your vision</h2>
               <p>
-                After the consultation, we'll work diligently to bring your
-                vision to life. We believe in transparency, so we'll keep you
-                updated on the progress of your garment and invite you to at
-                least one fitting session to ensure that everything fits
-                perfectly.
+                After the consultation, we'll work diligently to bring your vision to
+                life. We believe in transparency, so we'll keep you updated on the
+                progress of your garment and invite you to at least one fitting session to
+                ensure that everything fits perfectly.
               </p>
               <div class="cta-black">
                 <a href="contact.html">Book a consultation</a>
